# c-fingfold

./: .gitignore  CMakeLists.txt  README.md  __init__.py  cc_util.cpp  cc_util.hpp  main.cpp  test.py  util.ipynb  util.py  utils.py
